<resources>
    <string name="app_name">Vizkar-V1</string>
    <string name="nothing"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Iniciar Sesion</string>
    <string name="loginGoogle">Iniciar Con Google</string>
    <string name="recoverPass">Recuperar Contraseña</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="newUser">¿Nuevo?</string>

    <!-- Activity Main -->
    <string name="section1">UpComing Events</string>
    <string name="section2">My Events</string>
    <string name="section3">Profile</string>

    <!-- Fragment Perfil -->
    <string name="NameTag">Name</string>
    <string name="CityTag">City</string>
    <string name="AgeTag">Age</string>
    <string name="MailTag">E-mail @</string>
    <string name="NameTag_hint">Enter your name</string>
    <string name="CityTag_hint">Enter your city</string>
    <string name="AgeTag_hint">Enter your age</string>
    <string name="MailTag_hint">Enter your mail</string>
    <string name="LogOut">LogOut</string>
    <string name="title_activity_inicial">ActivityInicial</string>

    <!-- Fragment My Events -->
    <string name="myEvents_nothingInHere">Theres nothing in here</string>
    <string name="myEvents_title">MY EVENTS</string>
    <string name="upcomingEvents_title">UPCOMING EVENTS</string>
    <string name="title_activity_view_image">ActivityViewImage</string>


</resources>
