<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/mainPurple"
tools:context="com.iteso.vizkar_v1.activityLoginScreen">

<ImageView
    android:id="@+id/vizkarLogo"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:scaleType="fitCenter" />

<ImageView
    android:id="@+id/userLogo"
    android:layout_width="40.5dp"
    android:layout_height="40.5dp"
    android:layout_alignTop="@+id/username"
    android:layout_toStartOf="@+id/vizkarLogo"
    android:background="@color/buttonBlue"
    android:scaleType="fitCenter" />

    <EditText
        android:id="@+id/username"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vizkarLogo"
        android:layout_below="@id/vizkarLogo"
        android:layout_marginTop="20dp"
        android:background="@color/buttonBlue"
        android:hint="Usuario"
        android:textSize="30dp"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/mainWhite"
        android:textColorHint="@color/mainLightGray" />

    <ImageView
        android:id="@+id/passwordLogo"
        android:layout_width="40.5dp"
        android:layout_height="40.5dp"
        android:layout_alignTop="@+id/password"
        android:layout_toStartOf="@+id/vizkarLogo"
        android:background="@color/buttonBlue"
        android:scaleType="fitCenter" />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vizkarLogo"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:layout_marginBottom ="25dp"
        android:background="@color/buttonBlue"
        android:hint="Contraseña"
        android:textSize="30dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/mainWhite"
        android:textColorHint="@color/mainLightGray" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/chkRecuerdame"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom ="15dp"
        android:text="@string/rememberMe"
        android:textAlignment="center"
        android:textColor="@color/mainWhite"
        android:textSize="7.5pt" />

    <TextView
        android:id="@+id/recoverPassword"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/chkRecuerdame"
        android:layout_centerHorizontal="true"
        android:text="@string/recoverPass"
        android:textAlignment="center"
        android:textColor="@color/mainWhite"
        android:textSize="7.5pt" />
<Button
    android:id="@+id/login"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_above="@id/sign_in_button"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="10dp"
    android:text="@string/login" />

<com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginStart="20dp"
    android:text="@string/loginGoogle"/>

<TextView
    android:id="@+id/lblNuevo"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="129dp"
    android:layout_toEndOf="@+id/login"
    android:textColor="@color/mainWhite"
    android:textSize="9pt"
    android:text="@string/newUser" />
</RelativeLayout>